--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/Ranking.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/Ranking.xaml
@@ -17,11 +17,11 @@
             <ImageBrush ImageSource="/Assets/Images/fondo_pasapalabra.jpeg"/>
         </RelativePanel.Background>
         <Button x:Name="BackButton" Foreground="White" Style="{StaticResource NavigationBackButtonNormalStyle}" Click="BackButton_Click"
-                 RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True"/>
-        <StackPanel MaxWidth="600" BorderBrush="Black" BorderThickness="5" CornerRadius="10" Margin="0,100" Background="#90FFFFFF">
+                 RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True" />
+        <StackPanel  BorderBrush="Black" BorderThickness="5" CornerRadius="10" Margin="0,100" Background="#90FFFFFF" RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="50">
             <TextBlock Margin="0,10,0,40" FontSize="88" FontWeight="Bold" Foreground="White" FontFamily="Keedy Sans" 
-                       VerticalAlignment="Center" HorizontalAlignment="Center" Text="Ranking"/>
-            <Grid>
+                       VerticalAlignment="Center" HorizontalAlignment="Center" Text="Ranking" />
+            <Grid Padding="10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
@@ -29,11 +29,11 @@
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="nick" Text="Nick" Grid.Column="0" FontWeight="Bold" FontSize="20"/>
-                <TextBlock x:Name="aciertos" Text="Aciertos" Grid.Column="1" FontWeight="Bold" FontSize="20"/>
-                <TextBlock x:Name="fallos" Text="Fallos" Grid.Column="2" FontWeight="Bold" FontSize="20"/>
-                <TextBlock x:Name="tiempo" Text="Tiempo" Grid.Column="3" FontWeight="Bold" FontSize="20"/>
-                <TextBlock x:Name="score" Text="Puntuación" Grid.Column="4" FontWeight="Bold" FontSize="20"/>
+                <TextBlock x:Name="nick" Text="Nick" Grid.Column="0" FontWeight="Bold" FontSize="20" Margin="0,0,10,0"/>
+                <TextBlock x:Name="aciertos" Text="Aciertos" Grid.Column="1" FontWeight="Bold" FontSize="20" Margin="0,0,10,0"/>
+                <TextBlock x:Name="fallos" Text="Fallos" Grid.Column="2" FontWeight="Bold" FontSize="20" Margin="0,0,10,0"/>
+                <TextBlock x:Name="tiempo" Text="Tiempo" Grid.Column="3" FontWeight="Bold" FontSize="20" Margin="0,0,10,0"/>
+                <TextBlock x:Name="score" Text="Puntuación" Grid.Column="4" FontWeight="Bold" FontSize="20" Margin="0,0,10,0"/>
             </Grid>
             <ListView ItemsSource="{Binding ListaPartidas}">
                 <ListView.ItemTemplate>
@@ -46,11 +46,11 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock x:Name="nick" Text="{Binding Nick}" Grid.Column="0" FontWeight="Bold" FontSize="14" />
-                            <TextBlock x:Name="aciertos" Text="{Binding TotalAcertadas}" Grid.Column="1" FontWeight="Bold" FontSize="14"/>
-                            <TextBlock x:Name="fallos" Text="{Binding TotalFalladas}" Grid.Column="2" FontWeight="Bold" FontSize="14"/>
-                            <TextBlock x:Name="tiempo" Text="{Binding Tiempo}" Grid.Column="3" FontWeight="Bold" FontSize="14"/>
-                            <TextBlock x:Name="score" Text="{Binding Puntuacion}" Grid.Column="4" FontWeight="Bold" FontSize="14"/>
+                            <TextBlock x:Name="nick" Text="{Binding Nick}" Grid.Column="0" FontWeight="Bold" FontSize="14" Margin="0,0,40,0" TextWrapping="Wrap" Width="50"/>
+                            <TextBlock x:Name="aciertos" Text="{Binding TotalAcertadas}" Grid.Column="1" FontWeight="Bold" FontSize="14" Margin="0,0,50,0"/>
+                            <TextBlock x:Name="fallos" Text="{Binding TotalFalladas}" Grid.Column="2" FontWeight="Bold" FontSize="14" Margin="0,0,50,0"/>
+                            <TextBlock x:Name="tiempo" Text="{Binding Tiempo}" Grid.Column="3" FontWeight="Bold" FontSize="14" Margin="0,0,50,0"/>
+                            <TextBlock x:Name="score" Text="{Binding Puntuacion}" Grid.Column="4" FontWeight="Bold" FontSize="14" />
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
