Tts arreglado, userControl letra listo. Falta arreglar interfaz ladeada, ranking, pedida de usuario al terminar partida

--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/UsersControlls/LetraControl.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/UsersControlls/LetraControl.xaml
@@ -10,7 +10,7 @@
     d:DesignWidth="64">
 
     <UserControl.Resources>
-        <Storyboard x:Name="storyBoard" x:Key="strbPregunta">
+        <Storyboard x:Name="storyBoardPrueba" x:Key="strbPregunta">
             <DoubleAnimation EnableDependentAnimation="True" Storyboard.TargetName="ellipse" Storyboard.TargetProperty="Width"
                  From="58" To="64" AutoReverse="True" Duration="0:0:2" RepeatBehavior="Forever"/>
             <DoubleAnimation EnableDependentAnimation="True" Storyboard.TargetName="ellipse" Storyboard.TargetProperty="Height"
