--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/MainPage.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/MainPage.xaml
@@ -1,164 +1,40 @@
 ﻿<Page
-    x:Class="Trabajo_DEINT_PasapalabraUI.MainPage"
+    x:Class="Trabajo_DEINT_PasapalabraUI.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Trabajo_DEINT_PasapalabraUI"
     xmlns:ut="using:Trabajo_DEINT_PasapalabraUI.Utils"
+    xmlns:local="using:Trabajo_DEINT_PasapalabraUI.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:vm="using:Trabajo_DEINT_PasapalabraUI.ViewModels"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     mc:Ignorable="d"
-    xmlns:uc ="using:Trabajo_DEINT_PasapalabraUI.Views.UsersControlls"
-    xmlns:cv ="using:Trabajo_DEINT_PasapalabraUI.Utils.Converters" 
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    <Page.DataContext>
-        <vm:clsGamePageVM/>
-    </Page.DataContext>
-
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
     <Page.Resources>
-        <ui:AttachedDropShadow x:Key="CommonShadow" Offset="4" />
-        <cv:clsBoolToVisibilityConverter x:Key="cvVisbility"/>
+        <Storyboard x:Name="storyboard4">
+                <DoubleAnimation x:Name="doubleAnimation" Duration="0:0:5" To="100" Storyboard.TargetName="bn" Storyboard.TargetProperty="(Border.RenderTransform).(CompositeTransform.TranslateX)" d:IsOptimized="True"
+                                 RepeatBehavior="Forever" AutoReverse="True"/>
+            <DoubleAnimation  Duration="0:0:5" To="-1000" Storyboard.TargetName="bn" Storyboard.TargetProperty="(Border.RenderTransform).(CompositeTransform.TranslateY)" d:IsOptimized="True"
+                                 RepeatBehavior="Forever" AutoReverse="True"/>
+
+            </Storyboard>
     </Page.Resources>
 
-
-    <RelativePanel>
+    <RelativePanel x:Name="rltRoot">
         <RelativePanel.Background>
-            <ImageBrush ImageSource="/Assets/Images/fondo_pasapalabra.jpeg"/>
+            <ImageBrush ImageSource="/Assets/Images/fondo_pasapalabra.jpeg"></ImageBrush>
         </RelativePanel.Background>
-        <uc:PreguntaFalladaControl Respuesta="{Binding RespuestaPreguntaFallada}" LetraBoton="{Binding LetraPreguntaFallada}" Visibilidad="{Binding VisibilityPreguntaFallidaControl, Mode=TwoWay}" Canvas.ZIndex="1"
-                                   RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True"/>
-        <Button x:Name="BackButton" Foreground="White" Style="{StaticResource NavigationBackButtonNormalStyle}" Click="BackButton_Click"
-                 RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True"/>
-
-        <TextBlock x:Name="txtBlckT" FontSize="40" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"
-                   ui:Effects.Shadow="{StaticResource CommonShadow}" FontFamily="Calibri"
-                   RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
-            EL ROSCO DE
-        </TextBlock>
-        <TextBlock x:Name="txtBlckT2" FontSize="40" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"
-                   ui:Effects.Shadow="{StaticResource CommonShadow}" FontFamily="Verdana"
-                   RelativePanel.Below="txtBlckT" RelativePanel.AlignLeftWith="txtBlckT"  RelativePanel.AlignRightWith="txtBlckT">
-            PASABALABRA
-        </TextBlock>
-
-        <!--Canvas Abajo Izquierda-->
-        <Canvas x:Name="cvIzq" MinHeight="160" MinWidth="250" Margin="16"
-                RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
-            <Border BorderBrush="White" BorderThickness="2" CornerRadius="90" Canvas.ZIndex="1">
-                <Ellipse Fill="Blue" Height="150" Width="150" />
-            </Border>
-            <Border BorderBrush="White" BorderThickness="2" CornerRadius="90" Canvas.Left="136" Canvas.Top="25">
-                <Ellipse Fill="LimeGreen" Height="100" Width="100" />
-            </Border>
-            <controls:DropShadowPanel BlurRadius="6.0" ShadowOpacity="0.80" HorizontalAlignment="Center" VerticalAlignment="Center" OffsetX="5.0" OffsetY="5.0" Color="#02035e"
-                                      Canvas.ZIndex="2" Canvas.Left="35" Canvas.Top="45">
-                <TextBlock Text="{Binding TiempoMax}" FontSize="40" FontWeight="Bold" Foreground="White"/>
+        <StackPanel x:Name="stckMenu" BorderBrush="White" BorderThickness="15" Padding="80" CornerRadius="100" RelativePanel.AlignHorizontalCenterWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True">
+            <StackPanel.Background>
+                <SolidColorBrush Color="White" Opacity="0.4"></SolidColorBrush>
+            </StackPanel.Background>
+            <controls:DropShadowPanel BlurRadius="6.0" ShadowOpacity="0.80" HorizontalAlignment="Center" VerticalAlignment="Center"
+                         OffsetZ="5.0" OffsetX="10.0" OffsetY="10.0" Color="#02035e">
+                <TextBlock Margin="0,10,0,40" FontSize="88" FontWeight="Bold" Foreground="White" FontFamily="Keedy Sans" 
+                       VerticalAlignment="Center" HorizontalAlignment="Center" Text="PASAPALABRA"/>
             </controls:DropShadowPanel>
-
-            <controls:DropShadowPanel BlurRadius="6.0" ShadowOpacity="0.80" HorizontalAlignment="Center" VerticalAlignment="Center" OffsetX="5.0" OffsetY="5.0" Color="#02035e"
-            Canvas.Left="176" Canvas.Top="50" Canvas.ZIndex="2">
-                <TextBlock Text="{Binding Aciertos}" FontSize="36" FontWeight="Bold" Foreground="White"/>
-            </controls:DropShadowPanel>
-        </Canvas>
-
-        <!--Grid Abajo Derecha-->
-        <Grid x:Name="cvDcha" Margin="16" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignBottomWithPanel="True">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock FontSize="12" FontWeight="Bold" Foreground="White" FontFamily="Verdana" 
-                       VerticalAlignment="Center" HorizontalAlignment="Center"
-                       Grid.Row="0" Grid.Column="0" Margin="0,0,12,12">
-                    PALABRAS
-                    <LineBreak/>
-                    FALLADAS
-            </TextBlock>
-            <TextBlock FontSize="12" FontWeight="Bold" Foreground="White" FontFamily="Verdana" 
-                       VerticalAlignment="Center" HorizontalAlignment="Center"
-                       Grid.Row="1" Grid.Column="0" Margin="0,0,12,12">
-                    PALABRAS
-                    <LineBreak/>
-                    RESTANTES
-            </TextBlock>
-            <Border BorderBrush="White" BorderThickness="2" CornerRadius="90" Grid.Row="0" Grid.Column="1" Margin="0,0,12,12">
-                <Ellipse Fill="Red" Height="60" Width="60" VerticalAlignment="Center"/>
-            </Border>
-
-
-            <Border BorderBrush="White" BorderThickness="2" CornerRadius="90" Grid.Row="1" Grid.Column="1" Margin="0,0,12,12">
-                <Ellipse Fill="Blue" Height="60" Width="60" VerticalAlignment="Center"/>
-            </Border>
-
-            <controls:DropShadowPanel BlurRadius="6.0" ShadowOpacity="0.80" HorizontalAlignment="Center" VerticalAlignment="Center" OffsetX="5.0" OffsetY="5.0" Color="#02035e"
-                                      Grid.Row="0" Grid.Column="1" Margin="0,0,12,12">
-                <TextBlock Text="{Binding Fallos}" FontSize="24" FontWeight="Bold" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            </controls:DropShadowPanel>
-
-            <controls:DropShadowPanel BlurRadius="6.0" ShadowOpacity="0.80" HorizontalAlignment="Center" VerticalAlignment="Center" OffsetX="5.0" OffsetY="5.0" Color="#02035e"
-                                      Grid.Row="1" Grid.Column="1" Margin="0,0,12,12">
-                <TextBlock Text="{Binding PalabrasRestantes}" FontSize="24" FontWeight="Bold" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            </controls:DropShadowPanel>
-        </Grid>
-        <Grid x:Name="cvRosco" RelativePanel.AlignBottomWith="cvIzq" Background="Transparent"
-                   RelativePanel.Below="txtBlckT2" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignLeftWithPanel="True">
-            <!--NO FUNCIONA EL CIRCULAR PANEL DENTRO DEL CANVAS-->
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <ListBox x:Name="listBoxPrueba" Grid.Row="0" Grid.Column="0" Margin="-18,0,18,0" IsHitTestVisible="False"
-                     ItemsSource="{Binding ListadoPreguntas}" SelectedIndex="{Binding PreguntaSeleccionada, Mode=TwoWay}">
-                <ListBox.Background>
-                    <ImageBrush ImageSource="\Assets\Images\fondo_pasapalabra.jpeg"></ImageBrush>
-                </ListBox.Background>
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <ut:clsCircularPanel/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <uc:LetraControl Letra="{Binding Letra}" Color="{Binding Color, Mode=TwoWay}"/>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <Ellipse  Height="550" Width="550" Opacity="0.8" Fill="White"/>
-            <StackPanel Height="550" Width="550" Grid.Row="0" Grid.Column="0" Orientation="Vertical" Background="Transparent">
-                <TextBlock Foreground="Black" Text="{Binding TxtBoxLetraPregunta}" FontSize="32" FontWeight="SemiBold" Margin="0,60,0,0" HorizontalAlignment="Center" />
-                <Button Name="btnAudio" Click="btnAudio_Click"  HorizontalAlignment="Center" Margin="0,20,0,0" Height="40" BorderBrush="DarkBlue" BorderThickness="1" CornerRadius="20"
-                       MinWidth="20" MinHeight="20" Background="{ThemeResource AppBarItemBackgroundThemeBrush}" >
-                    <Image Source="/Assets/Images/volumen.png" Opacity="2" />
-                </Button>
-                <TextBlock Name="txtPregunta" TextWrapping="WrapWholeWords" TextAlignment="Center"
-                           Text="{Binding TxtBoxEnunciadoPregunta}"
-                           HorizontalAlignment="Center" Margin="0,0,0,0"
-                           Foreground="Black"  FontSize="22" FontWeight="SemiBold" 
-                           MaxWidth="450"/>
-
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,30,0,0">
-                    <TextBox x:Name="txtRespuesta" PlaceholderText="RESPUESTA" TextAlignment="Center" Margin="50,30,0,0" FontSize="22" CornerRadius="0" BorderBrush="Black" 
-                         Width="240" MinHeight="40" FontFamily="Berlin Sans FB" BorderThickness="0,0,0,2" Background="{ThemeResource AppBarItemBackgroundThemeBrush}"
-                             Text="{Binding TxtBoxRespuestaJugador,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Button Name="btnMicro" Click="btnMicro_Click"  Height="40" BorderBrush="DarkBlue" BorderThickness="1" CornerRadius="20" 
-                        HorizontalAlignment="Center" Margin="20,20,0,0" Padding="2,2,2,2" MinWidth="20" MinHeight="20" Background="{ThemeResource AppBarItemBackgroundThemeBrush}">
-                        <Image Source="/Assets/Images/micro1.png" Opacity="2"/>
-                    </Button>
-                </StackPanel>
-                <AppBarButton Icon="Accept" CornerRadius="6" Background="CadetBlue" HorizontalAlignment="Center" Margin="0,15,0,0" 
-                        MaxWidth="40" MaxHeight="40" Command="{Binding CheckRespuestaCommand}"/>
-                <Button Name="btnPasaPalabra" Content="PASAPALABRA" MinHeight="20" MinWidth="100" HorizontalAlignment="Center" Margin="0,20,0,0" Padding="10" 
-                        CornerRadius="20" BorderBrush="DarkBlue" BorderThickness="1" Background="{ThemeResource AppBarItemBackgroundThemeBrush}" Command="{Binding SaltarPreguntaCommand}"  FontFamily="Tahoma" FontWeight="Bold" FontSize="16" />
-            </StackPanel>
-        </Grid>
+            <Button FontFamily="Keedy Sans" HorizontalAlignment="Center" BorderBrush="Black"  Background="White" CornerRadius="5" FontSize="20" Foreground="Black" FontWeight="SemiBold" Click="Button_Play_Click">PLAY</Button>
+            <Button x:Name="btnPuntuacion" HorizontalAlignment="Center" BorderBrush="Black"  Background="White" Margin="0,15,0,0" CornerRadius="5" FontSize="20" Foreground="Black" FontWeight="SemiBold"
+            FontFamily="Keedy Sans">SCOREBOARD</Button>
+        </StackPanel>
     </RelativePanel>
 </Page>
