--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/Ranking.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/Ranking.xaml
@@ -34,7 +34,7 @@
                 <TextBlock x:Name="tiempo" Text="Tiempo" Grid.Column="3" FontWeight="Bold" FontSize="20" Margin="0,0,10,0"/>
                 <TextBlock x:Name="score" Text="Puntuación" Grid.Column="4" FontWeight="Bold" FontSize="20" Margin="0,0,10,0"/>
             </Grid>
-            <ListView ItemsSource="{Binding ListaPartidas}">
+            <ListView ItemsSource="{Binding ListaPartidas}" IsHitTestVisible="False">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
