--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/GamePage.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/GamePage.xaml
@@ -10,7 +10,6 @@
     xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     mc:Ignorable="d"
     xmlns:uc ="using:Trabajo_DEINT_PasapalabraUI.Views.UsersControlls"
-    xmlns:cv ="using:Trabajo_DEINT_PasapalabraUI.Utils.Converters" 
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -20,7 +19,6 @@
 
     <Page.Resources>
         <ui:AttachedDropShadow x:Key="CommonShadow" Offset="4" />
-        <cv:clsBoolToVisibilityConverter x:Key="cvVisbility"/>
     </Page.Resources>
 
     <RelativePanel>
@@ -29,7 +27,7 @@
         </RelativePanel.Background>
         <uc:PreguntaFalladaControl Respuesta="{Binding RespuestaPreguntaFallada}" LetraBoton="{Binding LetraPreguntaFallada}" Visibilidad="{Binding VisibilityPreguntaFallidaControl, Mode=TwoWay}" Canvas.ZIndex="1"
                                    RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True"/>
-        <Button x:Name="BackButton" Foreground="White" Style="{StaticResource NavigationBackButtonNormalStyle}" Click="BackButton_Click"
+        <Button x:Name="BackButton" Foreground="White" Style="{StaticResource NavigationBackButtonNormalStyle}" Command="{Binding VolverAInicioCommand}"
                  RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True"/>
 
         <TextBlock x:Name="txtBlckT" FontSize="40" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"
