--- a/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/Ranking.xaml
+++ b/Trabajo-DEINT-Pasapalabra/Trabajo-DEINT-PasapalabraUI/Views/Ranking.xaml
@@ -11,6 +11,7 @@
     <Page.DataContext>
         <vm:clsRankingVM/>
     </Page.DataContext>
+    <ScrollViewer>
     <RelativePanel>
         <RelativePanel.Background>
             <ImageBrush ImageSource="/Assets/Images/fondo_pasapalabra.jpeg"/>
@@ -56,4 +57,5 @@
             </ListView>
         </StackPanel>
     </RelativePanel>
+    </ScrollViewer>
 </Page>
